fix: Make class visibility working

--- a/src/css/link-list.css
+++ b/src/css/link-list.css
@@ -51,7 +51,7 @@
 }
 
 .visibility {
-  /*visibility: hidden;*/
+  visibility: hidden;
 }
 
 @media screen and (max-width: 650px) {
